configs/peer-auth.yml
apiVersion: security.istio.io/v1beta1
kind: PeerAuthentication
metadata:
  name: mysql
  namespace: kubeflow
spec:
  selector:
    matchLabels:
      app: mysql
  mtls:
    mode: DISABLE
