configs/mysql-peer-auth.yml
apiVersion: v1
kind: Pod
metadata:
  name: mysql-client
spec:
  containers:
    - name: shell-container
      image: mysql:8
      command: ["sleep", "infinity"]
      stdin: true
      tty: true
  restartPolicy: Always
