configs/global-allow-all.yml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: global-deny-all
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - {}
